app update with Fragments

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,19 +6,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:paddingTop="30dp"
-    android:paddingBottom="30dp"
     android:background="@color/white">
 
-   <androidx.recyclerview.widget.RecyclerView
-       android:id="@+id/recyclerView1"
+   <androidx.fragment.app.FragmentContainerView
        android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       tools:listitem="@layout/cars_widjets_item"
-       app:layout_constraintTop_toTopOf="parent"
-       app:layout_constraintEnd_toEndOf="parent"
-       app:layout_constraintStart_toStartOf="parent"
-
-       />
+       android:layout_height="match_parent"
+        android:id="@+id/conteiner"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
