--- a/app/src/main/res/layout/cars_widjets_item.xml
+++ b/app/src/main/res/layout/cars_widjets_item.xml
@@ -3,89 +3,80 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/backkkkkk"
-    android:layout_margin="4dp"
-    >
-
-    <FrameLayout
-        android:id="@+id/frameLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    android:layout_height="250dp"
+    android:layout_margin="5dp"
+    android:background="@drawable/background_for_rec">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <TextView
+            android:id="@+id/tv_carModel"
             android:textColor="@color/black"
-            android:id="@+id/car_model"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="24sp"
+            android:textSize="20sp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/iv_carImage"
+            app:layout_constraintStart_toStartOf="@id/iv_carImage"
             android:textStyle="bold"
-            tools:text="Cars Model"
-            />
+            tools:text="Cars Model"/>
 
         <ImageView
+            android:id="@+id/iv_carImage"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginVertical="10dp"
             android:scaleType="centerCrop"
-            android:id="@+id/car_IMG"
-            android:layout_width="220dp"
-            android:layout_height="130dp"
-            android:layout_marginTop="60dp"
-            tools:background="@color/black" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/tv_carSpeed"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_carModel"
+            tools:background="@color/black"/>
 
 
         <TextView
+            android:id="@+id/tv_carCountry"
+            app:layout_constraintTop_toBottomOf="@id/tv_carSpeed"
+            app:layout_constraintStart_toStartOf="@id/tv_carSpeed"
             android:maxLines="1"
-            android:id="@+id/car_company"
+            android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="240dp"
-            android:layout_marginTop="75dp"
-            android:textSize="20sp"
+            android:textSize="22sp"
             android:textStyle="italic"
-            tools:text="Car Company"
-
-            />
+            tools:text="Car Company"/>
 
         <TextView
-            android:id="@+id/car_speed"
+            android:id="@+id/tv_carSpeed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="Car Speed"
-            android:layout_marginStart="240dp"
-            android:layout_marginTop="115dp"
-            android:textSize="20sp"
-            />
-
-
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_carType"
+            app:layout_constraintStart_toStartOf="@id/tv_carType"
+            android:textSize="22sp"/>
 
         <TextView
-            android:id="@+id/car_type"
-            android:layout_width="wrap_content"
+            android:id="@+id/tv_carType"
+            app:layout_constraintTop_toBottomOf="@id/tv_StarsWidget"
+            app:layout_constraintStart_toStartOf="@id/tv_StarsWidget"
+            android:layout_width="0dp"
+            android:layout_marginTop="10dp"
             android:layout_height="wrap_content"
             tools:text="Car type"
-            android:layout_marginStart="240dp"
-            android:textSize="20sp"
-            android:textStyle="italic"
-            android:layout_marginTop="155dp"
-            />
+            android:textSize="22sp"
+            android:textStyle="italic"/>
 
-            <TextView
-
-                android:id="@+id/Stars_widget"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="★☆"
-                android:textColor="@color/yellow"
-                android:layout_marginTop="40dp"
-                android:textSize="20sp"
-                android:layout_marginStart="240dp"
-                />
-    </FrameLayout>
+        <TextView
+            android:id="@+id/tv_StarsWidget"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/yellow"
+            android:textSize="18sp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="100dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="★☆"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
