--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#80BFBFBF</color>
-    <color name="gray_dark">#5B5B5B</color>
-    <color name="gray_dark2">#665B5B5B</color>
+    <color name="gray_medium">#5B5B5B</color>
+    <color name="gray_dark">#665B5B5B</color>
     <color name="yellow">#FFDD00</color>
-
 </resources>
